- library:
  o fix urpm::download::sync() return value (used by rpmdrake) (#43639)

Version 6.9 - 9 September 2008, Pascal "Pixel" Rigaux

- urpmi
  o after installing in chroot, migrate back rpmdb db version to one
    compatible with the rpm in the chroot
  o fix orphans handling: an already installed pkg must not become
    "unrequested" because a new version of it is required
- fix display of downloaded urls with aria2 and metalinks
- fix handling --downloader when using mirrorlist (it was forcing aria2)

Version 6.8 - 4 September 2008, Pascal "Pixel" Rigaux

- fix proxy parameter for aria2
- remove rsync mirrors when calling aria2
- urpmi
  o enhance --bug: copy installed-through-deps.list in bug report
- gurpmi, gurpmi2:
  o silence perl warnings (ie remove "use warnings")
- library:
  o modify urpm::download::get_content() to work as non-superuser

Version 6.7 - 3 September 2008, Pascal "Pixel" Rigaux

- really call aria2 with --max-tries=1
  (it helps a lot when trying to download some files (eg: reconfig.urpmi))

Version 6.6 - 2 September 2008, Pascal "Pixel" Rigaux

- call aria2 with brand-new --uri-selector=adaptive

Version 6.5 - 1 September 2008, Pascal "Pixel" Rigaux

- all tools
  o use metalink/aria2 by default (when available) when using a mirrorlist
- urpmi, urpmq
  o do not display all substring matches on stderr, only a subset of them, and
    suggest to use "-a" to use all matches (#38956)
- urpmi
  o do not write useless "foo (obsoletes foo-xxx)" in
    installed-through-deps.list (#42167)
- urpmi.addmedia
  o instead of discarding --update when using --distrib, give it a meaning:
    only add media flagged "update"
  o handle $URPMI_ADDMEDIA_REASON 
    (special reason to give to api.mandriva.com/mirrors/... to allow statistics)
- gurpmi2
  o nicer default window size
  o render nicely under matchbox during install
  o handle --update

Version 6.4 - 14 August 2008, Thierry Vignaud

- gurpmi