@@ -1,4 +1,5 @@
 - library:
+  o enable rpmdrake to support --debug option
   o fix urpm::download::sync() return value (used by rpmdrake) (#43639)
 
 Version 6.9 - 9 September 2008, Pascal "Pixel" Rigaux
